EPMRPP-44770 Filters page. Text align fixes

--- a/app/src/pages/inside/filtersPage/filterGrid/filterOptions/filterOptions.scss
+++ b/app/src/pages/inside/filtersPage/filterGrid/filterOptions/filterOptions.scss
@@ -17,6 +17,5 @@
 .filter-options {
   font-family: $FONT-REGULAR;
   font-size: 13px;
-  line-height: 18px;
   color: $COLOR--charcoal-grey;
 }
